Basic Webpage assignment update
Added a basic adventurer's guild info.

--- a/Assignment.html
+++ b/Assignment.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>HTML assignment page<title>
+		<title>Adventurer's Guild</title>
 		<meta charset="utf-8">
 	</head>
 	
 	<body>
+		<p>
+			<h1>Welcome to the Adventurers Guild</h1>
+			
+			<h3>Locations</h3>
+			
+			<h6><ul>
+				<li>Front Desk/Quest Requests</li>
+				<li>Quest Completion Desk</li>
+				<li>Apocathory</li>
+				<li>Smithy</li>
+				<li>Healing Ward</li>
+			</ul></h6>
+		</p>
 	</body>
 	
 </html>
