All tasks up to  (not including) Video assignment

--- a/Assignment.html
+++ b/Assignment.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+	<center>
 	<head>
 		<title>Adventurer's Guild</title>
 		<meta charset="utf-8">
 	</head>
 	
 	<body>
-		<p>
 			<h1>Welcome to the Adventurers Guild</h1>
+			<img src="https://img.freepik.com/premium-photo/gothic-cathedral-interior-majesty-design_1409-6814.jpg"  width="250" 
+						height="150"/>
+						
+						<a href="https://img.freepik.com/premium-photo/gothic-cathedral-interior-majesty-design_1409-6814.jpg">Direct link to Guild hall image online location!</a>
+
+	</center>		
 			
+			<p>As you enter this grand building, that allows the smooth function of adventure society, 
+			you see a list of locations within this building.</p>
+
 			<h3>Locations</h3>
 			
+			
+			<main>			
 			<h6><ul>
 				<li>Front Desk/Quest Requests</li>
 				<li>Quest Completion Desk</li>
-				<li>Apocathory</li>
+				<li>Apothecary</li>
 				<li>Smithy</li>
 				<li>Healing Ward</li>
 			</ul></h6>
-		</p>
+			</main>
+			
+			<a href="Guildhall-Pict-Link.html">Hall Image</a>
 	</body>
 	
+	<footer style="font-size:30%"> For any issues with this page you're out of luck...</footer>
 </html>
