Completed Video Assignment HTML tasks

--- a/Assignment.html
+++ b/Assignment.html
@@ -30,8 +30,14 @@
 				<li>Healing Ward</li>
 			</ul></h6>
 			</main>
+	<center>
+	<nav>
+		<a href="Assignment.html">Home</a>
+		<a href="Guildhall-Pict-Link.html">Guildhall Picture</a>
+		<a href="Dog_Video.html">Dog Video</a>
+	</nav>
+	<center>
 			
-			<a href="Guildhall-Pict-Link.html">Hall Image</a>
 	</body>
 	
 	<footer style="font-size:30%"> For any issues with this page you're out of luck...</footer>
