--- a/Dog_Video.html
+++ b/Dog_Video.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<title>Guild Hall</title>
+	<title>Dog video link</title>
 	<meta charset="utf-8">
 	</head>
-	
+
 	<body>
-	<img src="Guild Hall.avif">
-	
-	</body>
-	<footer> <center>
+	<center>
 	<nav>
 		<a href="Assignment.html">Home</a>
 		<a href="Guildhall-Pict-Link.html">Guildhall Picture</a>
 		<a href="Dog_Video.html">Dog Video</a>
 	</nav>
-	</center> </footer>
+	</center>
+
+<a href="https://youtu.be/g4uOsS0FsEs?feature=shared">Dog Vidio woof woof</a>
+</body>
+
 </html>
