Finished Challenge#1 video and blockquote

--- a/Assignment.html
+++ b/Assignment.html
@@ -11,7 +11,7 @@
 			<img src="https://img.freepik.com/premium-photo/gothic-cathedral-interior-majesty-design_1409-6814.jpg"  width="250" 
 						height="150"/>
 						
-						<a href="https://img.freepik.com/premium-photo/gothic-cathedral-interior-majesty-design_1409-6814.jpg">Direct link to Guild hall image online location!</a>
+			<p><a href="https://img.freepik.com/premium-photo/gothic-cathedral-interior-majesty-design_1409-6814.jpg">Direct link to Guild hall image online location!</a></p>
 
 	</center>		
 			
@@ -37,7 +37,20 @@
 		<a href="Dog_Video.html">Dog Video</a>
 	</nav>
 	<center>
-			
+	
+	<p> What is an Adventure?</p>
+	<blockquote cite="https://en.wikipedia.org/wiki/Adventure">
+		<p>
+			An adventure is an exciting experience or undertaking that is typically bold, sometimes risky. 
+			Adventures may be activities with danger such as traveling, exploring, skydiving, mountain climbing, 
+			scuba diving, river rafting, or other extreme sports. Adventures are often undertaken to create 
+			psychological arousal or in order to achieve a greater goal, such as the pursuit of knowledge that 
+			can only be obtained by such activities.
+			</p>
+	</blockquote>
+	
+<iframe width="560" height="315" src="https://www.youtube.com/embed/83m261lAlrs?si=eJRX_6-ETiqJHQOwrel?=0" title="YouTube video player" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 	</body>
 	
 	<footer style="font-size:30%"> For any issues with this page you're out of luck...</footer>
