Basic HTML and JavaScript 1 Assignment push
This changes the Basic_HTML_1.html file to add Colour, Font, Size, U, I, B elements and an image with the alt function.

--- a/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
+++ b/Basic_HTML_and_JavaScript_1/Basic_HTML_1.html
@@ -1,6 +1,22 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
+<head>
+		<title>Basic_HTML_1.html</title>
+		<meta charset="utf-8">
+</head>
+
 
 <script src="Basic_JavaScript_1.js"></script>
+
+<P><font color="red" face="Arial" size=1>This writing is in RED unsing direct colour name and Arial font with size 1 font!</font></P>
+
+<P><font color="#00FF00" face="Impact" size="5">This writing is in LIME unsing HEXADECIMAL code for the colour and Impact for the font with size 5 font!</font></P>
+
+<P><b><i><u><font color="black" face="Comic Sans MS" size="3">
+	This writing is in BLACK unsing direct colour name and Comic Sans MS for the font with size 3 font! With text in BOLD, ITALIC, and UNDERLINE!!!
+</font></b></i></u></P>
+
+<center><img src="hps://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg"  width="250" 
+						height="150" alt="HTML 5 logo is not showing... sorry for the inconvenience!" /></center>
 
 </html>
