Removed old file

--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -3,20 +3,22 @@
 <head>
 	<title>Basic_HTML_3</title>
 	<meta charset="utf8">
+	<style>
+	p {color:red;}
+	h1 {color: rgb(0, 0, 245);}
+	footer {color:#7FFFD4; text-align: center;}
+	</style>
 </head>
 
 <body>
-<style>
-p {color:red;}
-h1 {color: rgb(0, 0, 245);}
-</style>
 <h1>Style for header in blue using RGB no.</h1>
 <p>Style for paragraph in red using colour.</p>
-
 <div style="color: green;">
 <h2>Div for header </h2>
 <p>and for some reason the style is overriding all paragraphs no clue why!</p>
 </div>
 </body>
+
+	<footer>This is a footer not smelly feet!</footer>
 
 </html>
