See readme (continued CSS challenges)

--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -1,23 +1,20 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<head>
-	<title>Basic_HTML_3</title>
-	<meta charset="utf8">
-	<style>
-	p {color:red;}
-	h1 {color: rgb(0, 0, 245);}
-	footer {color:#7FFFD4; text-align: center;}
-	</style>
-</head>
+	<head>
+		<title>Basic_HTML_3</title>
+		<meta charset="utf8">
+		<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
+	</head>
 
-<body>
-<h1>Style for header in blue using RGB no.</h1>
-<p>Style for paragraph in red using colour.</p>
-<div style="color: green;">
-<h2>Div for header </h2>
-<p>and for some reason the style is overriding all paragraphs no clue why!</p>
-</div>
-</body>
+	<body>
+		<h1>Style for header in blue using RGB no.</h1>
+		<p>Style for paragraph in green using colour, alignment right.</p>
+
+		<div style="color: red;">
+			<h2>Div for header </h2>
+			<p>and for some reason the style is overriding all paragraphs no clue why!</p>
+		</div>
+	</body>
 
 	<footer>This is a footer not smelly feet!</footer>
 
