Basic_HTML_and_CSS push

--- a/Basic_HTML_and_CSS/HTML_Table.html
+++ b/Basic_HTML_and_CSS/HTML_Table.html
@@ -4,11 +4,39 @@
 	<head>
 		<title>HTML Table</title>
 		<meta charset="utf8">
+		<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 	</head>
 
 	<body><center>
 		<h1>Adventure's Guild list</h1>
-		<table style="width 100%">
+		<table style="width 100%" id="table-ol">
+			<tr>
+				<th>Guild Hall Name</th>
+				<th>Location</th>
+				<th>Portal Link</th>
+				<th>Area Rank Avg.</th>
+			</tr>
+			<tr>
+				<td>Penny Wish Hall</td>
+				<td>Ardentha (Walled City)</td>
+				<td color:green;>Yes</td>
+				<td>Bronze</td>
+			</tr>
+			<tr>
+				<td>Dark Tidings Rest</td>
+				<td>Goler (Necropolis)</td>
+				<td>No</td>
+				<td>Silver</td>
+			</tr>
+			<tr>
+				<td>Hellsing</td>
+				<td>Ver'tash (Destroyed)</td>
+				<td>Yes (Sealed)</td>
+				<td>Platinum</td>
+			</tr>
+		</table>	
+		
+		<table style="width 100%" id="table-ul">
 			<tr>
 				<th>Guild Hall Name</th>
 				<th>Location</th>
