--- a/Basic_HTML_and_CSS/Basic_HTML_5.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_5.html
@@ -6,9 +6,11 @@
 		<link rel="stylesheet" type="text/css" href="Basic_CSS_2.css">
 	</head>
 	
+	<h1>Shadow Header</h1>
+	
 	<body>
 			<p>Well the text is styled, coloured, bold and aligned</p>
 	</body>
 	
-	<footer>Honestly just give up if it's really not working!!</footer>
+	<footer>Honestly just give up if it's really not working!! 	&copy;</footer>
 </html>
