--- a/Basic_HTML_and_CSS/HTML_Lists.html
+++ b/Basic_HTML_and_CSS/HTML_Lists.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>HTML Lists</title>
 		<meta charset="utf8">
+		<link rel="stylesheet" type="text/css" href="Basic_CSS_1.css">
 	</head>
 	<body>
 	
