Update Pathfinder 1e recommendation.html

--- a/HTML Documents Assignment/Pathfinder 1e recommendation.html
+++ b/HTML Documents Assignment/Pathfinder 1e recommendation.html
@@ -17,8 +17,8 @@
 
 </br></br></br>
 <nav>
-		<a href="Pathfinder 1e recommendation.html">Pathfinder 1e recommendation page</a>
-		<a href="Pathfinder 2e pointer.html">Pathfinder 2e Pointer page</a>
+		<a href="Pathfinder 1e recommendation.html" target="new"><em>Pathfinder 1e recommendation page</em></a>
+		<a href="Pathfinder 2e pointer.html" target="_blank"><em>Pathfinder 2e Pointer page</em></a>
 </nav>
 </center>
 
