Added another paragraph.

--- a/Basic_HTML_and_CSS/Basic_HTML_3.html
+++ b/Basic_HTML_and_CSS/Basic_HTML_3.html
@@ -14,6 +14,8 @@
 			<h2>Div for header </h2>
 			<p>and for some reason the style is overriding all paragraphs no clue why!</p>
 		</div>
+
+		<p>Added another paragraph.</p>
 	</body>
 
 	<footer>This is a footer not smelly feet!</footer>
