Corrected errors with HTML Checker

--- a/Project/index.html
+++ b/Project/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>The Greenheart Protectorite</title>
@@ -14,9 +14,9 @@
 		<div class="wrap">
 			<div class="menu-container">
 				<ul class="menu">
-					<a href="#Entrance" id="link"><li>Entrance</li></a>	
+					<a href="#Entrance"><li>Entrance</li></a>	
 					<a href="#Locations"><li>Locations</li></a>				
-					<a href="#Leaders" id="link"><li>Leaders</li></a>
+					<a href="#Leaders"><li>Leaders</li></a>
 					<a href="#Application-Desk"><li>Application Desk</li></a>
 				</ul>
 			</div>
@@ -46,7 +46,7 @@
 					<!-- Location Tile: Fort Tuskwater (Stag Lord's Fort) -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/1 Fort_tuskwater_with_bgc.png" alt="Fort tuskwater">
+							<img src="./images/thumb/1_Fort_tuskwater_with_bgc.png" alt="Fort tuskwater">
 							<div class="photo-overlay">
 								<h3>Fort Tuskwater (CITY)</h3>
 								<p>The Capital of the Protectorite. May you seek glory and fame in the kingdoms name!!!</p>
@@ -58,7 +58,7 @@
 					<!-- Location Tile: Olegsberg -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/2 Olegsberg_with_bgc.png" alt="Olegsberg">
+							<img src="./images/thumb/2_Olegsberg_with_bgc.png" alt="Olegsberg">
 							<div class="photo-overlay">
 								<h3>Olegsberg (CITY)</h3>
 								<p>The trade centre of the lands. Money and wealth is it you seek?</p>
@@ -70,7 +70,7 @@
 					<!-- Location Tile: Tatzlford -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/3 Tatzlford_with_bgc.png" alt="Tatzlford">
+							<img src="./images/thumb/3_Tatzlford_with_bgc.png" alt="Tatzlford">
 							<div class="photo-overlay">
 								<h3>Tatzlford (TOWN)</h3>
 								<p>Fortress Town and last refuge before the frontier. Specializing in herb cultivation with wonderful hot springs.</p>
@@ -82,7 +82,7 @@
 					<!-- Location Tile: Varnhold -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/4 Varnhold_with_bgc.png" alt="Varnhold">
+							<img src="./images/thumb/4_Varnhold_with_bgc.png" alt="Varnhold">
 							<div class="photo-overlay">
 								<h3>Varnhold (TOWN)</h3>
 								<p>A peaceful farming and livestock Town. With a nomadic Centaur Village in the area.</p>
@@ -94,7 +94,7 @@
 					<!-- Location Tile: Dwarfhold (Dag'goraz'thath) -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/5 Dwarf_Hold_with_bgc.png" alt="Dwarfhold (Dag'goraz'thath)">
+							<img src="./images/thumb/5_Dwarf_Hold_with_bgc.png" alt="Dwarfhold (Dag'goraz'thath)">
 							<div class="photo-overlay">
 								<h3>Dwarfhold "Dag'goraz'thath" (CITY)</h3>
 								<p>A dwarven city decicated to the god Droskar. May toil lead you to success!</p>
@@ -106,7 +106,7 @@
 					<!-- Location Tile: Fort Drelev -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/6 Fort_Drelev_with_bgc.png" alt="Fort Drelev">
+							<img src="./images/thumb/6_Fort_Drelev_with_bgc.png" alt="Fort Drelev">
 							<div class="photo-overlay">
 								<h3>Fort Drelev (TOWN)</h3>
 								<p>Is it to be the dangerous untamed frontier Fortress Town? Plenty of adventure and glory left to claim! </p>
@@ -118,7 +118,7 @@
 					<!-- Location Tile: Tempel Refuge of Erastil -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/7 Tempe_Refuge_of_Erastil_with_bgc.png" alt="Tempe Refuge of Erastil">
+							<img src="./images/thumb/7_Tempe_Refuge_of_Erastil_with_bgc.png" alt="Tempe Refuge of Erastil">
 							<div class="photo-overlay">
 								<h3>Tempel Refuge of Erastil</h3>
 								<p>A peaceful life of reflection and prayer for the weary soul. Stunning scenery in a secluded forest.</p>
@@ -130,7 +130,7 @@
 					<!-- Location Tile: Scalehold -->
 					<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/8 Scalehold_with_bgc.png" alt="Scalehold">
+							<img src="./images/thumb/8_Scalehold_with_bgc.png" alt="Scalehold">
 							<div class="photo-overlay">
 								<h3>Scalehold (VILLAGE)</h3>
 								<p>A swampy village of Kobolds and Lizardmen. Take care where you step as the waters go deep...</p>
@@ -142,7 +142,7 @@
 					<!-- Location Tile: Nomen Tribe -->
 				<div class="photo-container">
 						<div class="photo">
-							<img src="./images/thumb/9 Nomen_Tribe_with_bgc.png" alt="Nomen Tribe">
+							<img src="./images/thumb/9_Nomen_Tribe_with_bgc.png" alt="Nomen Tribe">
 							<div class="photo-overlay">
 								<h3>Nomen Tribe (VILLAGE)</h3>
 								<p>Centaur Nomads of the great planes. Wary of outsiders but willing to trade meat and textiles for what they need.</p>
@@ -166,7 +166,7 @@
 					<!-- Leader Tile: Harkon Pegason -->
 					<div class="photo-container-2">
 						<div class="photo">
-							<img src="./images/thumb/Leaders/Harkon Pegason.jpg" alt="Harkon Pegason">
+							<img src="./images/thumb/Leaders/Harkon_Pegason.jpg" alt="Harkon Pegason">
 							<div class="photo-overlay">
 								<h3>Harkon Pegason</h3>
 								<p>The leader of the council and fearless paladin. Justice and unity above all is sought, unafraid to make the harshest of decisions to protect the people.</p>
@@ -178,7 +178,7 @@
 					<!-- Leader Tile: Catheshal Jaet -->
 					<div class="photo-container-2">
 						<div class="photo">
-							<img src="./images/thumb/Leaders/Catheshal Jaet.jpg" alt="Catheshal Jaet">
+							<img src="./images/thumb/Leaders/Catheshal_Jaet.jpg" alt="Catheshal Jaet">
 							<div class="photo-overlay">
 								<h3>Catheshal Jaet</h3>
 								<p>Lead diplomat and fey like enchantress. All fall to their knees in awe at her beauty and grace.</p>
@@ -190,7 +190,7 @@
 					<!-- Leader Tile: Oleg Leventen -->
 					<div class="photo-container-2">
 						<div class="photo">
-							<img src="./images/thumb/Leaders/Oleg Leventen.jpg" alt="Oleg Leventen">
+							<img src="./images/thumb/Leaders/Oleg_Leventen.jpg" alt="Oleg Leventen">
 							<div class="photo-overlay">
 								<h3>Oleg Leventen</h3>
 								<p>The only normal member of the group. A regular frontier shopkeeper elevated to the treasurer of an entire empire. Constantly under the immense stress assisting in leading with mad adventurers.</p>
@@ -202,7 +202,7 @@
 					<!-- Leader Tile: Finbar Garress -->
 					<div class="photo-container-2">
 						<div class="photo">
-							<img src="./images/thumb/Leaders/Finbar Garress.jpg" alt="Finbar Garress">
+							<img src="./images/thumb/Leaders/Finbar_Garress.jpg" alt="Finbar Garress">
 							<div class="photo-overlay">
 								<h3>Finbar Garress</h3>
 								<p>Ruthless military warlord and commander of all forces in the Protectorate. Valuing loyalty and perfection and punishing failure with violence.</p>
@@ -214,7 +214,7 @@
 					<!-- Leader Tile: Harlos Fury -->
 					<div class="photo-container-2">
 						<div class="photo">
-							<img src="./images/thumb/Leaders/Harlos Fury.jpg" alt="Harlos Fury">
+							<img src="./images/thumb/Leaders/Harlos_Fury.jpg" alt="Harlos Fury">
 							<div class="photo-overlay">
 								<h3>Harlos Fury</h3>
 								<p>Head of faith and fiery of personality. Being a lava gnome she struggles with the passions and sensibilities of humans. Her fiery sermons often rouse religious fervour and aggression in ways she really doesn't mean or expect.</p>
@@ -226,7 +226,7 @@
 					 <!-- Leader Tile: Varik Surtova -->
 					<div class="photo-container-2">
 						<div class="photo">
-							<img src="./images/thumb/Leaders/Varik Surtova.jpg" alt="Varik Surtova">
+							<img src="./images/thumb/Leaders/Varik_Surtova.jpg" alt="Varik Surtova">
 							<div class="photo-overlay">
 								<h3>Varik Surtova</h3>
 								<p>Spymaster and problem solver... Hilariously due to his very private and secretive nature he is the most beloved. Acting as a poor herbalist being dragged about with the adventurers on the council. He ensures sponsoring for hospitals, orphanages and healers throughout the kingdom (a good portion of which are also spies and assassins).</p>
@@ -248,7 +248,7 @@
 					<div class="app">
 						<h2>
 							<span>Your Immigration admition is only a few details away!</span>
-							<br />YOUR PATH TO A NEW LIFE AWAITS YOU!
+						<br>YOUR PATH TO A NEW LIFE AWAITS YOU!
 						</h2>
 						<p class="application-text">
 							Please provide your details and class information below.
