A few more tweeks

--- a/One-Page Website/One-Page Website.html
+++ b/One-Page Website/One-Page Website.html
@@ -1,4 +1,4 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
 <html lang="eu">
 	<head>
 		<title>The Protectorite's Inner Council</title>
@@ -11,9 +11,9 @@
 		<div class="">
 			<div class="menu-container">
 				<ul class="menu">
-					<a href="#GLORIOUS Leaders" id="link"><li>GLORIOUS Leaders</li></a>
-					<a href="#Applications" id="link"><li>Applications</li></a>&nbsp;&nbsp;
-					<a href="#Informotaion" id="link"><li>Informotaion</li></a>&nbsp;&nbsp;
+					<a href="#GLORIOUS_Leaders" id="link"><li>GLORIOUS Leaders</li></a>
+					<a href="#Applications" id="link"><li>Applications</li></a>
+					<a href="#Informotaion" id="link"><li>Informotaion</li></a>
 				</ul>
 			</div>
 		</div>
@@ -30,7 +30,7 @@
 				<summary style="font-size: 45px;">Dare you view our GLORIOUS Leaders?</summary>
 			<div>
 
-					<h3 class="text2 flex-container" id="GLORIOUS Leaders">Show respect civilian for these are the glorious leaders of the Greenheart!<br>Be in awe of these magnificant people!</h3>
+					<h3 class="text2 flex-container" id="GLORIOUS_Leaders">Show respect civilian for these are the glorious leaders of the Greenheart!<br>Be in awe of these magnificant people!</h3>
 				<div class="flex-container">
 				
 				<!-- Leader Tile: Harkon Pegason -->
@@ -118,12 +118,10 @@
 			<h1 id="Applications">Applications</h1> 
 			<div>
 				<img src="./Images/143_dock.jpg" alt="Administrator" style="width:30%">
-				<h2 class="text2"><span>YOU want to meet out council? YOU!!!</span>
-					Well they are extremely busy people!<br /> Fill out an application and details below and they may dain to grant you an audience...<br /> and please don't get mud on the carpets.
+				<h2 class="text2"><span>YOU want to meet our council? YOU!!!</span>
+					Well they are extremely busy people!<br> Fill out an application and details below and they may dain to grant you an audience...<br> and please don't get mud on the carpets.
 				</h2>
-				<p>
 					<h3>Please provide your details and class information below.</h3>
-				</p>
 				<div class="container">
 					<div class="app">
 						<div class="form-application">
@@ -150,18 +148,18 @@
 		 <br> <br> <br> <br>
 		<!-- End Application -->
 	<section>
-		<div class="flex-container">
-			<h3><details><summary>What the heck is this? PATHFINDER 1e</summary>This page is based off of one of my pathfinder campaigns called Kingmaker. 
+		<div class="container">
+			<details class="h31"><summary>What the heck is this? PATHFINDER 1e</summary>This page is based off of one of my pathfinder campaigns called Kingmaker. 
 			<br id="Informotaion">This is my player's characters as rullers of their empier. 
 			<br>If interested atall I've put a couple of really usefull starting of links to look at as well as a linked video! 
 			<br><br><a href="https://www.reddit.com/r/Pathfinder_RPG/comments/10c4147/how_to_learn_pathfinder_1e/">A reddit page for a brief overview of Pathfinder 1e and getting started including links.</a>
 			<br><br><a href="https://www.reddit.com/r/Pathfinder_RPG/comments/10ceag1/resources_for_new_pathfinder_players_both/">Another useful reddit page that covers both the first and second editions of Pathfinder with more excellent resources.</a>
 			<br><p>An enthusiastic video introdicing Pathfinder second edition!</p>
-			<iframe id="ytplayer" type="text/html" width="360" height="202" src="https://www.youtube.com/embed/sP1HIWyv8DI?controls=0&fs=0" frameborder="0" allowfullscreen>
-	
-			</details></h3>
-		</div>
+			</details>
 
+			<iframe id="ytplayer" type="text/html" width="360" height="202" src="https://www.youtube.com/embed/sP1HIWyv8DI?controls=0&fs=0" frameborder="0" allowfullscreen></iframe>
+		</div>
+	</section>
 		<!-- Footer -->
 			<div id="footer">
 				www.adventurerguildpractice.co.uk &nbsp;&copy; 2026
