--- a/bootstrap4_project/academy_cinemas.html
+++ b/bootstrap4_project/academy_cinemas.html
@@ -22,13 +22,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link text-light" href="#">About</a>
+        <a class="nav-link text-light" href="#About" id="link">About</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link text-light" href="#">Showtimes</a>
+        <a class="nav-link text-light" href="#Showtimes" id="link">Showtimes</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link text-light" href="#">Deals</a>
+        <a class="nav-link text-light" href="#Deals" id="link">Deals</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<!-- Colunms -->
+<!-- Columns 1-->
 <div class="container">
   <div class="row">
     <div class="col-sm">
@@ -63,13 +63,85 @@
       <p>Relax in our, extra-wide, plush cushioned recilners. Our seating arrangment is disabillity friendly &#9855;.</p>
   
     </div>
-    <div class="col-sm">
+
+    <div class="col-sm" id="About">
    
-      
+      <h3>Now Playing:</h3>
+      <ul class="list-group">
+        <li class="list-group-item">
+          <a class="nav-link" href="#">Kong: Skull Island</a>
+        </li>
+        <li class="list-group-item">
+          <a class="nav-link" href="#">Ghost in the Shell</a>
+        </li>
+        <li class="list-group-item">
+          <a class="nav-link" href="#">Beauty and the Beast</a>
+        </li>
 
     </div>
   </div>
 </div>
+
+<!-- Showtimes -->
+
+  <div class="card-deck my-5" id="Showtimes">
+  <div class="card">
+    <img class="card-img-top" src="./Img/kongskullisland.jpg" alt="Kong:_Skull_Island">
+    <div class="card-body">
+      <h5 class="card-title">Kong: Skull Island</h5>
+      <p class="card-text">A team of scientists explores an uncharted island in the Pacific, venturing into the domain of the mighty Kong and must fight to escape a primal Eden.</p>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="./Img/ghostintheshell.jpg" alt="Ghost_in_the_Shell">
+    <div class="card-body">
+      <h5 class="card-title">Ghost in the Shell</h5>
+      <p class="card-text">In the near future, Major Mira Killian is the first of her kind: A human saved from a terrible crash, who is cyber-enhanced to be a perfect soldier devoted to stopping the world's most dangerous criminals.</p>
+    </div>
+  </div>
+
+  <div class="card">
+    <img class="card-img-top" src="./Img/beautyandthebeast.jpg" alt="Beauty_and_the_Beast">
+    <div class="card-body">
+      <h5 class="card-title">Beauty and the Beast</h5>
+      <p class="card-text">A brave, beautiful, and brilliant young woman is imprisoned by a beast in his castle. Despite her fears, she learns to see beyond the beast's hideous exterior and realize the gentle heart of the true prince within him.</p>
+    </div>
+  </div>
+</div>
+
+<!-- END Showtimes -->
+
+<!-- Email & Submit button -->
+
+<div class="text-center">
+  <form>
+    <h1 class="text-primary my-5">Sign up for Movie Club Rewards!</h1>
+    <div class="form-group">
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+
+<!-- Container 2, Columns 2 (rewards) -->
+
+    <div class="container my-5" id="Deals">
+      <ul class="nav nav-inline">
+        <li class="nav-item">
+          <small><a class="nav-link active" href="#">Movie Rewards</a></small>
+        </li>
+        <li class="nav-item">
+          <small><a class="nav-link active" href="#">Movies@news.org</a></small>
+        </li>
+        <li class="nav-item">
+          <small><a class="nav-link active" href="#">Info@academycinemas.com</a></small>
+        </li>
+        <li class="nav-item">
+          <small class="nav-link">&copy;2026 Academy Cinemas&reg;</small>
+        </li>
+      </ul>
+    </div>
 
     </div>
 
